--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,11 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+/.idea/.gitignore
+/.idea/dataSources.xml
+/.idea/e-diary.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/dictionaries/mrsabin.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/vcs.xml
